--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -24,6 +24,7 @@
     "@storybook/vue3": "^6.5.15",
     "@vitejs/plugin-vue": "^4.0.0",
     "babel-loader": "^8.3.0",
+    "sass": "^1.57.1",
     "vite": "^4.0.0",
     "vue-loader": "^16.8.3"
   }
